# siaod

./: CMakeLists.txt
5_2/: main.cpp  view.txt
6_1/: main.cpp
6_2/: 6_2.cpp
7_1/: 7_1.cpp
7_2/: 7_2.cpp
8_1/: 8_1_LZ77.cpp  8_1_LZ78.cpp  8_1_hoffamn.cpp  8_1_shennon-fano.cpp
8_2/: 8_2_smart.cpp  8_2_stupid.cpp
